[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.1",
    "black>=22.12.0",
    "wemake-python-styleguide>=0.17.0",
    "flake8>=4.0.1",
    "isort>=5.11.4",
    "bandit>=1.7.4",
    "mypy>=0.991",
    "pep8-naming>=0.13.2",
    "pytest-randomly>=3.12.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "argcomplete>=3.1.1",
    "ptpython>=3.0.23",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '(src|tests)/.*\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
# log_cli = true
# log_level = NOTSET
#  -q
addopts = "-ra --tb=short  --durations=10 --durations-min=1.0 --cov --cov-report html --junitxml=junit.xml"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
# faulthandler_timeout=5
junit_logging = "all"

[project]
name = "atomic-lines"
version = "0.1.0"
description = ""
authors = [
    {name = "Malte Vesper", email = "malte.vesper@gmx.net"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "flake8-noqa>=1.3.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
